--- a/metadata/md5-cache/sci-libs/onnxruntime-1.20.1
+++ b/metadata/md5-cache/sci-libs/onnxruntime-1.20.1
@@ -10,7 +10,7 @@ LICENSE=MIT
 RDEPEND=dev-libs/protobuf:= python_single_target_python3_10? ( dev-lang/python:3.10 ) python_single_target_python3_11? ( dev-lang/python:3.11 ) python_single_target_python3_12? ( dev-lang/python:3.12 ) python_single_target_python3_13? ( dev-lang/python:3.13 )
 REQUIRED_USE=cuda? ( cudnn !lto ) hip? ( migraphx ) || ( cudnn migraphx onednn tensorrt ) ^^ ( python_single_target_python3_10 python_single_target_python3_11 python_single_target_python3_12 python_single_target_python3_13 )
 RESTRICT=mirror test
-SLOT=0
-SRC_URI=https://github.com/microsoft/onnxruntime/archive/refs/tags/v1.20.0.tar.gz -> onnxruntime-1.20.0.tar.gz https://github.com/dcleblanc/SafeInt/archive/3.0.28a.tar.gz -> SafeInt-3.0.28a.tar.gz https://github.com/google/flatbuffers/archive/v23.5.26.tar.gz -> flatbuffers-23.5.26.tar.gz https://github.com/HowardHinnant/date/archive/v3.0.1.tar.gz -> hhdate-3.0.1.tar.gz
+SLOT=0/1.20.1
+SRC_URI=https://github.com/microsoft/onnxruntime/archive/refs/tags/v1.20.1.tar.gz -> onnxruntime-1.20.1.tar.gz https://github.com/dcleblanc/SafeInt/archive/3.0.28a.tar.gz -> SafeInt-3.0.28a.tar.gz https://github.com/google/flatbuffers/archive/v23.5.26.tar.gz -> flatbuffers-23.5.26.tar.gz https://github.com/HowardHinnant/date/archive/v3.0.1.tar.gz -> hhdate-3.0.1.tar.gz
 _eclasses_=toolchain-funcs	d3d42b22a610ce81c267b644bcec9b87	multilib	b2a329026f2e404e9e371097dda47f96	flag-o-matic	f14aba975c94ccaa9f357a27e3b17ffe	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	2df4e452cea39a9ec8fb543ce059f8d6	xdg-utils	42869b3c8d86a70ef3cf75165a395e09	cmake	10a50dfaf728b802fcfd37f8d0da9056	cuda	283d0f298f6c196c755a0f8d50daca85	out-of-source-utils	dbf9e34ee8964084651e25907fa8f52c	multibuild	4650a65187015567b4e041bb9bfdb364	python-utils-r1	2005a06234063e6815028c5db214aa3f	python-single-r1	a5747fe6dc0651d95cb78eddd5e160a8	distutils-r1	e58d3ed262e4b32d6d1966bd66e941cc	llvm-utils	c989cff79c0976415f459e367a83dff9	llvm-r1	c6f5dcc9d729a7028f3884ff342d280c	rocm	826765f795a41b937d1bfe8e709346cd
-_md5_=c0cccd4b266aeddf2987485b30008ace
+_md5_=18fbf40f5854673ce024aa6e1ba0fa01
