--- a/metadata/md5-cache/media-sound/hydrogen-1.2.4
+++ b/metadata/md5-cache/media-sound/hydrogen-1.2.4
@@ -12,6 +12,6 @@ LICENSE=GPL-2 ZLIB
 RDEPEND=dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtsvg:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 dev-qt/qtxmlpatterns:5 media-libs/libsndfile alsa? ( media-libs/alsa-lib ) archive? ( app-arch/libarchive ) !archive? ( dev-libs/libtar ) doc? ( dev-texlive/texlive-fontutils ) jack? ( virtual/jack ) ladspa? ( media-libs/liblrdf ) lash? ( media-sound/lash ) osc? ( media-libs/liblo ) portaudio? ( media-libs/portaudio ) portmidi? ( media-libs/portmidi ) pulseaudio? ( media-libs/libpulse )
 REQUIRED_USE=lash? ( alsa )
 SLOT=0
-SRC_URI=https://github.com/hydrogen-music/hydrogen/archive/1.2.3.tar.gz -> hydrogen-1.2.3.tar.gz
-_eclasses_=xdg-utils	42869b3c8d86a70ef3cf75165a395e09	xdg	3ef49a87c52c8b77c476351195dfe575	toolchain-funcs	d3d42b22a610ce81c267b644bcec9b87	multilib	b2a329026f2e404e9e371097dda47f96	flag-o-matic	f14aba975c94ccaa9f357a27e3b17ffe	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	2df4e452cea39a9ec8fb543ce059f8d6	cmake	10a50dfaf728b802fcfd37f8d0da9056
-_md5_=0e8fea429a02dbaccfbeda4d8b79ead2
+SRC_URI=https://github.com/hydrogen-music/hydrogen/archive/1.2.4.tar.gz -> hydrogen-1.2.4.tar.gz
+_eclasses_=toolchain-funcs	d3d42b22a610ce81c267b644bcec9b87	multilib	b2a329026f2e404e9e371097dda47f96	flag-o-matic	f14aba975c94ccaa9f357a27e3b17ffe	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	2df4e452cea39a9ec8fb543ce059f8d6	xdg-utils	42869b3c8d86a70ef3cf75165a395e09	cmake	10a50dfaf728b802fcfd37f8d0da9056	xdg	3ef49a87c52c8b77c476351195dfe575
+_md5_=82c52e62a4a1f5322078652eb906feb2
