games-util/new-lg4ff-0.4.1

--- a/metadata/md5-cache/games-util/new-lg4ff-0.4.1
+++ b/metadata/md5-cache/games-util/new-lg4ff-0.4.1
@@ -7,11 +7,11 @@ HOMEPAGE=https://github.com/berarma/new-lg4ff
 IDEPEND=sys-apps/kmod[tools]
 INHERIT=linux-mod-r1
 IUSE=dist-kernel modules-compress modules-sign +strip
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~m68k ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=sys-apps/kmod[tools] dist-kernel? ( virtual/dist-kernel:= )
 RESTRICT=mirror
 SLOT=0
-SRC_URI=https://github.com/berarma/new-lg4ff/archive/0.4.0.tar.gz -> new-lg4ff-0.4.0.tar.gz
+SRC_URI=https://github.com/berarma/new-lg4ff/archive/v0.4.1.tar.gz -> new-lg4ff-0.4.1.tar.gz
 _eclasses_=mount-boot-utils	69218c024651aa10db01df7e8a5b63e0	toolchain-funcs	14648d8795f7779e11e1bc7cf08b7536	multilib	b2a329026f2e404e9e371097dda47f96	dist-kernel-utils	70154e87d5876b3be589e202d184c59f	edo	367e103a74bf77e6a8da7894d999fa3c	linux-info	ea4122ba1d8791a12b78e53f9510a2e3	multiprocessing	1e32df7deee68372153dca65f4a7c21f	linux-mod-r1	a42deaa3355310e242a4ff2dd37cad2c
-_md5_=2f8be36655fd4bd32eb5321332a7a187
+_md5_=24ec05e69edc09ada40d0a71271f8583
