--- a/metadata/md5-cache/dev-lang/pony-0.58.8
+++ b/metadata/md5-cache/dev-lang/pony-0.58.8
@@ -1,6 +1,6 @@
-BDEPEND=llvm-core/clang virtual/pkgconfig app-alternatives/ninja >=dev-build/cmake-3.20.5 >=dev-vcs/git-1.8.2.1[curl]
+BDEPEND=llvm_slot_17? ( llvm-core/clang:17= llvm-core/lld:17= ) llvm_slot_18? ( llvm-core/clang:18= llvm-core/lld:18= ) virtual/pkgconfig app-alternatives/ninja >=dev-build/cmake-3.20.5 >=dev-vcs/git-1.8.2.1[curl]
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=sys-libs/zlib vim-syntax? ( app-vim/pony-syntax )
+DEPEND=llvm_slot_17? ( llvm-core/clang:17= llvm-core/lld:17= ) llvm_slot_18? ( llvm-core/clang:18= llvm-core/lld:18= ) sys-libs/zlib vim-syntax? ( app-vim/pony-syntax )
 DESCRIPTION=Compiler for the Pony language
 EAPI=8
 HOMEPAGE=http://www.ponylang.org/
@@ -9,9 +9,9 @@ IUSE=+lto test vim-syntax +llvm_slot_18 llvm_slot_17
 KEYWORDS=~amd64 ~x86
 LICENSE=BSD-2
 PROPERTIES=live
-RDEPEND=sys-libs/zlib vim-syntax? ( app-vim/pony-syntax )
+RDEPEND=llvm_slot_17? ( llvm-core/clang:17= llvm-core/lld:17= ) llvm_slot_18? ( llvm-core/clang:18= llvm-core/lld:18= ) sys-libs/zlib vim-syntax? ( app-vim/pony-syntax )
 REQUIRED_USE=^^ ( llvm_slot_17 llvm_slot_18 )
 RESTRICT=strip network-sandbox !test? ( test )
 SLOT=0
 _eclasses_=toolchain-funcs	14648d8795f7779e11e1bc7cf08b7536	multilib	b2a329026f2e404e9e371097dda47f96	flag-o-matic	f14aba975c94ccaa9f357a27e3b17ffe	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	2df4e452cea39a9ec8fb543ce059f8d6	xdg-utils	42869b3c8d86a70ef3cf75165a395e09	cmake	10a50dfaf728b802fcfd37f8d0da9056	git-r3	875eb471682d3e1f18da124be97dcc81	llvm-utils	c989cff79c0976415f459e367a83dff9	llvm-r1	82e169a45855e1a973292c8208318140
-_md5_=d96604fd2d6cc0121f7ce62b2094058a
+_md5_=5f5992228353e35eef260fa650d8adc5
