--- a/metadata/md5-cache/media-gfx/GTS-2.5.1
+++ b/metadata/md5-cache/media-gfx/GTS-2.5.1
@@ -1,4 +1,4 @@
-BDEPEND=>=app-portage/elt-patches-20240116 sys-devel/gnuconfig || ( >=dev-build/automake-1.17-r1:1.17 >=dev-build/automake-1.16.5:1.16 ) || ( >=dev-build/autoconf-2.72-r1:2.72 ) >=dev-build/libtool-2.4.7-r3
+BDEPEND=sys-devel/gnuconfig >=app-portage/elt-patches-20250306 || ( >=dev-build/automake-1.17-r1:1.17 >=dev-build/automake-1.16.5:1.16 ) || ( >=dev-build/autoconf-2.72-r1:2.72 ) >=dev-build/libtool-2.4.7-r3
 DEFINED_PHASES=prepare
 DEPEND=media-gfx/sane-backends media-libs/glew:0 media-libs/tiff:0 virtual/glu x11-libs/fltk
 DESCRIPTION=scanning tool developed by Studio Ghibli
@@ -10,5 +10,5 @@ LICENSE=BSD
 RDEPEND=media-gfx/sane-backends media-libs/glew:0 media-libs/tiff:0 virtual/glu x11-libs/fltk
 SLOT=0
 SRC_URI=https://github.com/opentoonz/GTS/archive/v2.5.1.tar.gz -> GTS-2.5.1.tar.gz
-_eclasses_=gnuconfig	ddeb9f8caff1b5f71a09c75b7534df79	toolchain-funcs	6afdb6107430c1832ca7e16aacbf8fa1	multilib	b2a329026f2e404e9e371097dda47f96	libtool	6b28392a775f807c8be5fc7ec9a605b9	autotools	03ea4e0b6b685afdc980f00a43ea5d12
+_eclasses_=gnuconfig	ddeb9f8caff1b5f71a09c75b7534df79	toolchain-funcs	6afdb6107430c1832ca7e16aacbf8fa1	multilib	b2a329026f2e404e9e371097dda47f96	libtool	c81bd096be5f4c82f4e8f156ef112402	autotools	f20ecf7ab0a7c34e83238b3ed4aaf6d6
 _md5_=b851fbd42c20feb78296d1f001efaf90
