--- a/metadata/md5-cache/dev-db/valkey-8.1.1
+++ b/metadata/md5-cache/dev-db/valkey-8.1.1
@@ -1,4 +1,4 @@
-BDEPEND=acct-group/valkey acct-user/valkey virtual/pkgconfig test? ( dev-lang/tcl:0= ssl? ( dev-tcltk/tls ) ) sys-devel/gnuconfig >=app-portage/elt-patches-20250306 || ( >=dev-build/automake-1.17-r1:1.17 >=dev-build/automake-1.16.5:1.16 ) || ( >=dev-build/autoconf-2.72-r1:2.72 ) >=dev-build/libtool-2.4.7-r3 virtual/pkgconfig
+BDEPEND=acct-group/valkey acct-user/valkey virtual/pkgconfig test? ( dev-lang/tcl:0= ssl? ( dev-tcltk/tls ) ) sys-devel/gnuconfig >=app-portage/elt-patches-20250306 || ( >=dev-build/automake-1.18:1.18 >=dev-build/automake-1.17-r1:1.17 ) || ( >=dev-build/autoconf-2.72-r1:2.72 ) >=dev-build/libtool-2.4.7-r3 virtual/pkgconfig
 DEFINED_PHASES=compile configure install postinst prepare test
 DEPEND=ssl? ( dev-libs/openssl:0= ) systemd? ( sys-apps/systemd:= ) tcmalloc? ( dev-util/google-perftools )
 DESCRIPTION=Redis fork
@@ -12,5 +12,5 @@ RDEPEND=ssl? ( dev-libs/openssl:0= ) systemd? ( sys-apps/systemd:= ) tcmalloc? (
 RESTRICT=mirror !test? ( test )
 SLOT=0/8.1
 SRC_URI=https://github.com/valkey-io/valkey/archive/refs/tags/8.1.1.tar.gz -> valkey-8.1.1.tar.gz
-_eclasses_=gnuconfig	ddeb9f8caff1b5f71a09c75b7534df79	toolchain-funcs	f9d71a6efe9d083aec750dd13968e169	libtool	c81bd096be5f4c82f4e8f156ef112402	autotools	35f9bf6198bb538e28dcdea5fda274f2	edo	a5e294016aa84979fcb2459749eb80b2	multiprocessing	1e32df7deee68372153dca65f4a7c21f	systemd	a964c0cbe818b5729da1dbfcee5be861	tmpfiles	9a9814db5a3fbd4f1e921c05297e7735
+_eclasses_=gnuconfig	ddeb9f8caff1b5f71a09c75b7534df79	toolchain-funcs	f9d71a6efe9d083aec750dd13968e169	libtool	c81bd096be5f4c82f4e8f156ef112402	autotools	216128ca9bbff45fbea22427005310c7	edo	a5e294016aa84979fcb2459749eb80b2	multiprocessing	1e32df7deee68372153dca65f4a7c21f	systemd	a964c0cbe818b5729da1dbfcee5be861	tmpfiles	9a9814db5a3fbd4f1e921c05297e7735
 _md5_=e7c9f46302818742a1c63bf0e2fee9d8
