--- a/metadata/md5-cache/games-fps/uzdoom-4.14.3
+++ b/metadata/md5-cache/games-fps/uzdoom-4.14.3
@@ -1,16 +1,16 @@
 BDEPEND=app-alternatives/ninja >=dev-build/cmake-3.28.5
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare test
-DEPEND=app-arch/bzip2 media-libs/libjpeg-turbo:0= media-libs/libsdl2[gles2?,opengl,vulkan?] media-libs/libvpx:= media-libs/libwebp:= media-libs/openal >=media-libs/zmusic-1.1.14 sys-libs/zlib gtk? ( x11-libs/gtk+:3 )
+DEPEND=app-arch/bzip2 media-libs/libjpeg-turbo:0= media-libs/libsdl2[gles2?,opengl,vulkan?] media-libs/libvpx:= media-libs/libwebp:= media-libs/openal >=media-libs/zmusic-1.1.14 sys-libs/zlib gtk? ( x11-libs/gtk+:3 ) !games-fps/gzdoom
 DESCRIPTION=A modder-friendly OpenGL source port based on the DOOM engine
 EAPI=8
-HOMEPAGE=https://zdoom.org
+HOMEPAGE=https://zdoom.org https://github.com/UZDoom/UZDoom
 IDEPEND=dev-util/desktop-file-utils x11-misc/shared-mime-info
 INHERIT=cmake desktop xdg flag-o-matic
 IUSE=debug gles2 gtk +non-free openmp +swr telemetry vulkan
 KEYWORDS=~amd64 ~arm64
 LICENSE=Apache-2.0 BSD BZIP2 GPL-3 LGPL-2.1+ LGPL-3 MIT non-free? ( Activision ChexQuest3 DOOM-COLLECTORS-EDITION freedist WidePix )
-RDEPEND=app-arch/bzip2 media-libs/libjpeg-turbo:0= media-libs/libsdl2[gles2?,opengl,vulkan?] media-libs/libvpx:= media-libs/libwebp:= media-libs/openal >=media-libs/zmusic-1.1.14 sys-libs/zlib gtk? ( x11-libs/gtk+:3 )
+RDEPEND=app-arch/bzip2 media-libs/libjpeg-turbo:0= media-libs/libsdl2[gles2?,opengl,vulkan?] media-libs/libvpx:= media-libs/libwebp:= media-libs/openal >=media-libs/zmusic-1.1.14 sys-libs/zlib gtk? ( x11-libs/gtk+:3 ) !games-fps/gzdoom
 SLOT=0
-SRC_URI=https://github.com/ZDoom/gzdoom/archive/g4.14.2.tar.gz -> gzdoom-4.14.2.tar.gz
+SRC_URI=https://github.com/UZDoom/UZDoom/archive/refs/tags/4.14.3.tar.gz -> uzdoom-4.14.3.tar.gz
 _eclasses_=toolchain-funcs	98d9f464d912ae6b7316fb8a3721f5db	flag-o-matic	a7afe42e95fb46ce9691605acfb24672	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	3a59a39e97af0f7c03f49cf3c22f262b	xdg-utils	42869b3c8d86a70ef3cf75165a395e09	cmake	22e4e58d68692975dc74424dc9b12fb7	desktop	431f346390bf3c3a17c9b775d7e329b3	xdg	3ef49a87c52c8b77c476351195dfe575
-_md5_=c27f0b284a573fe0c96ca0dd2f0c1a4d
+_md5_=55b83bdd66ead5c69d6cb13ef535b391
