app-emulation/quickemu-4.9.8

--- a/metadata/md5-cache/app-emulation/quickemu-4.9.8
+++ b/metadata/md5-cache/app-emulation/quickemu-4.9.8
@@ -11,6 +11,6 @@ RDEPEND=python_single_target_python3_11? ( dev-lang/python:3.11 ) python_single_
 REQUIRED_USE=^^ ( python_single_target_python3_11 python_single_target_python3_12 python_single_target_python3_13 python_single_target_python3_14 )
 RESTRICT=mirror
 SLOT=0
-SRC_URI=https://github.com/quickemu-project/quickemu/archive/2129abf060eb6af45e0393135da24736e363fc9b.tar.gz -> quickemu-4.9.7_p20250511.gh.tar.gz
+SRC_URI=https://github.com/quickemu-project/quickemu/archive/refs/tags/4.9.8.tar.gz -> quickemu-4.9.8.gh.tar.gz
 _eclasses_=multiprocessing	1e32df7deee68372153dca65f4a7c21f	toolchain-funcs	30214924c0c3b92ec7dbf24fc70d60d3	python-utils-r1	f1d3a4dea5847c7390ba91bd557c83aa	python-single-r1	a5747fe6dc0651d95cb78eddd5e160a8
-_md5_=378b1735cb588abe4e6420af46a0871a
+_md5_=1c4c5e915456b0829a81c60b6ce6072e
