--- a/metadata/md5-cache/media-sound/gwc-0.22.7
+++ b/metadata/md5-cache/media-sound/gwc-0.22.7
@@ -1,5 +1,5 @@
 BDEPEND=sys-devel/gnuconfig >=app-portage/elt-patches-20250306 || ( >=dev-build/automake-1.18:1.18 >=dev-build/automake-1.17-r1:1.17 ) || ( >=dev-build/autoconf-2.72-r1:2.72 ) >=dev-build/libtool-2.4.7-r3
-DEFINED_PHASES=compile configure install postinst postrm prepare
+DEFINED_PHASES=configure install postinst postrm prepare
 DEPEND=alsa? ( media-libs/alsa-lib ) pulseaudio? ( media-libs/libpulse ) media-libs/libsndfile ogg? ( media-libs/libvorbis ) sci-libs/fftw x11-libs/gtk+:2
 DESCRIPTION=Gtk (formerly Gnome) Wave Cleaner
 EAPI=8
@@ -11,6 +11,6 @@ LICENSE=GPL-2+
 RDEPEND=alsa? ( media-libs/alsa-lib ) pulseaudio? ( media-libs/libpulse ) media-libs/libsndfile ogg? ( media-libs/libvorbis ) sci-libs/fftw x11-libs/gtk+:2
 RESTRICT=mirror
 SLOT=0
-SRC_URI=https://github.com/AlisterH/gwc/archive/refs/tags/0.22-06.tar.gz -> gwc-0.22.6.gh.tar.gz
+SRC_URI=https://github.com/AlisterH/gwc/archive/refs/tags/0.22-07.tar.gz -> gwc-0.22.7.gh.tar.gz
 _eclasses_=gnuconfig	ddeb9f8caff1b5f71a09c75b7534df79	toolchain-funcs	7e440a20ac11dece04e3334622e6e5da	libtool	c81bd096be5f4c82f4e8f156ef112402	autotools	955b29ccd82c1df4755e5f37748d2fa6	flag-o-matic	a7afe42e95fb46ce9691605acfb24672	xdg-utils	42869b3c8d86a70ef3cf75165a395e09
-_md5_=811b86c73e0429a5bc0a64db9ccbadd3
+_md5_=a2191934a112f26b806d0049e2209915
