dev-db/valkey-9.0.3

--- a/metadata/md5-cache/dev-db/valkey-9.0.3
+++ b/metadata/md5-cache/dev-db/valkey-9.0.3
@@ -11,6 +11,6 @@ LICENSE=BSD Boost-1.0
 RDEPEND=ssl? ( dev-libs/openssl:0= ) systemd? ( sys-apps/systemd:= ) tcmalloc? ( dev-util/google-perftools ) acct-group/valkey acct-user/valkey virtual/tmpfiles
 RESTRICT=mirror !test? ( test )
 SLOT=0/9.0
-SRC_URI=https://github.com/valkey-io/valkey/archive/refs/tags/9.0.2.tar.gz -> valkey-9.0.2.tar.gz
-_eclasses_=autotools	3a740b2e55e60a60e8c0c411f3996dfa	edo	2df8eb50048485bad89140e3997b8b27	gnuconfig	b4fa4889c6f586d6b069215a86dd9e53	libtool	6a96cd90e5da8c7c615015479f46f1a4	multiprocessing	1e32df7deee68372153dca65f4a7c21f	systemd	a964c0cbe818b5729da1dbfcee5be861	tmpfiles	9a9814db5a3fbd4f1e921c05297e7735	toolchain-funcs	8a2c298bde71ecf3f452dd9e67c94369
+SRC_URI=https://github.com/valkey-io/valkey/archive/refs/tags/9.0.3.tar.gz -> valkey-9.0.3.tar.gz
+_eclasses_=gnuconfig	b4fa4889c6f586d6b069215a86dd9e53	toolchain-funcs	8a2c298bde71ecf3f452dd9e67c94369	libtool	6a96cd90e5da8c7c615015479f46f1a4	autotools	3a740b2e55e60a60e8c0c411f3996dfa	edo	a5e294016aa84979fcb2459749eb80b2	multiprocessing	1e32df7deee68372153dca65f4a7c21f	systemd	a964c0cbe818b5729da1dbfcee5be861	tmpfiles	9a9814db5a3fbd4f1e921c05297e7735
 _md5_=3ac4c86c35c490cccdfa8f841fca4923
