unmask some Qt5 packages

--- a/metadata/md5-cache/sci-libs/onnxruntime-1.24.2
+++ b/metadata/md5-cache/sci-libs/onnxruntime-1.24.2
@@ -13,5 +13,5 @@ REQUIRED_USE=cuda? ( cudnn !lto ) hip? ( migraphx ) || ( cudnn migraphx onednn t
 RESTRICT=mirror test
 SLOT=0/1.24.2
 SRC_URI=https://github.com/microsoft/onnxruntime/archive/refs/tags/v1.24.2.tar.gz -> onnxruntime-1.24.2.tar.gz https://github.com/dcleblanc/SafeInt/archive/3.0.28.tar.gz -> SafeInt-3.0.28.tar.gz https://github.com/google/flatbuffers/archive/v23.5.26.tar.gz -> flatbuffers-23.5.26.tar.gz https://github.com/HowardHinnant/date/archive/v3.0.1.tar.gz -> hhdate-3.0.1.tar.gz https://github.com/dmlc/dlpack/archive/refs/tags/v0.6.tar.gz -> dlpack-0.6.tar.gz
-_eclasses_=cmake	5691a3da96eac88f135cf3596b8c2c3c	cuda	8b660e223a1695e3884ee4c7dc2c5059	cuda-extra	136d6c15e6d28edf8d31926713bdaed2	distutils-r1	20f2de98de352d5dae53d6972cf12f63	flag-o-matic	ed1eda86c8f746a2a75f7f9f7478f5f4	llvm-r2	d6b14d3bbccc5ab5b4182c606245dbd3	llvm-utils	e7edb4086e31c8537574b263d899f826	multibuild	83db098a835f71feb71761f72a694aa2	multilib	404b65bd5212cff83b3935c685419d08	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	d063ea1900a793f93eb095010d6d9156	out-of-source-utils	8e5093bd27b7f541a1913271f25d633a	python-single-r1	a5747fe6dc0651d95cb78eddd5e160a8	python-utils-r1	f1d3a4dea5847c7390ba91bd557c83aa	rocm	b406b041c5b107f8d8600865210e24e2	toolchain-funcs	8a2c298bde71ecf3f452dd9e67c94369	xdg-utils	42869b3c8d86a70ef3cf75165a395e09
+_eclasses_=toolchain-funcs	8a2c298bde71ecf3f452dd9e67c94369	flag-o-matic	ed1eda86c8f746a2a75f7f9f7478f5f4	multiprocessing	1e32df7deee68372153dca65f4a7c21f	ninja-utils	d063ea1900a793f93eb095010d6d9156	xdg-utils	42869b3c8d86a70ef3cf75165a395e09	cmake	5691a3da96eac88f135cf3596b8c2c3c	cuda	8b660e223a1695e3884ee4c7dc2c5059	cuda-extra	136d6c15e6d28edf8d31926713bdaed2	out-of-source-utils	8e5093bd27b7f541a1913271f25d633a	multibuild	83db098a835f71feb71761f72a694aa2	multilib	404b65bd5212cff83b3935c685419d08	python-utils-r1	f1d3a4dea5847c7390ba91bd557c83aa	python-single-r1	a5747fe6dc0651d95cb78eddd5e160a8	distutils-r1	20f2de98de352d5dae53d6972cf12f63	llvm-utils	e7edb4086e31c8537574b263d899f826	llvm-r2	8bc46809768366b4239eab39335419bc	rocm	b406b041c5b107f8d8600865210e24e2
 _md5_=75371e32de455b0f2df1db9391788ea3
